# vision-toolkit-2

./: .gitattributes  MANIFEST.in.cfg  PLAN  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: v01dxyz-sync-cron-2.yml
documentation/: main_scanpath_saliency.py
documentation/Documentaion_VT/: main.py  main_article_3.py  main_article_4.py  main_fixation.py  main_frequency.py  main_learning.py  main_pursuit.py  main_pursuit_task.py  main_rim.py  main_saccade.py  main_scanpath_RQA.py  main_scanpath_geometrical.py  main_segmentation.py  main_signal_based.py  main_stochastic.py
documentation/Documentaion_VT/dataset/: data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  example_pursuit.csv  example_pursuit_theo.csv  nat006.csv
documentation/Documentaion_VT/dataset/DS_Hollywood2/: gaze_s1.csv  gaze_s10.csv  gaze_s11.csv  gaze_s12.csv  gaze_s13.csv  gaze_s14.csv  gaze_s15.csv  gaze_s16.csv  gaze_s18.csv  gaze_s19.csv  gaze_s2.csv  gaze_s20.csv  gaze_s21.csv  gaze_s23.csv  gaze_s24.csv  gaze_s26.csv  gaze_s27.csv  gaze_s29.csv  gaze_s3.csv  gaze_s30.csv  gaze_s31.csv  gaze_s33.csv  gaze_s34.csv  (+53 more)
documentation/documentation_RIM/: main.py
documentation/documentation_RIM/input/: _gaze.csv  _world_timestamps.csv
documentation/documentation_RIM/mappedGazeOutput/: mappedGaze_gaze.csv
src/vision_toolkit/: __init__.py
src/vision_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vision_toolkit/aoi/: aoi_base.py
src/vision_toolkit/scanpath/: scanpath_base.py
src/vision_toolkit/utils/: segmentation_utils.py
(+782 files in other folders)
