[metadata]
name = vision_toolkit
version = 0.1
author = QuentinLaborde-ENS
author_email = quentin.laborde@ens-paris-saclay.fr
maintainer = QuentinLaborde-ENS
description = Vision Toolkit
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    bitarray
    build  
    func_timeout   
    bokeh
    bokeh_sampledata
    gudhi
    hilbertcurve
    holoviews
    lempel_ziv_complexity
    matplotlib
    omegaconf==2.2.*   
    setuptools 
    networkx 
    numpy
    imageio
    opencv-python
    pandas
    panel
    plotly
    scikit-learn
    scipy
    seaborn
    shapely
    typing
    torch>=1.12
    torchvision>=0.13
    treelib==1.6.4  
    tqdm
    pytlsd==0.0.2
    
packages = find:
package_dir =
    = src 

[options.packages.find]
where = src

 